--- a/style.scss
+++ b/style.scss
@@ -83,5 +83,13 @@ $font-size: 40px;
 }
 
 
+.rotate-img1 img {
+  transform: rotate(40deg);
+}
+
+.rotate-img2 img {
+  transform: rotate(-40deg);
+}
+
 
 
